--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,38 +1,8 @@
 
 
-@font-face {
-    font-family: 'Gill-Sans';
-    src: url('/assets/Gill_Sans/gillsans.otf') format('opentype');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Gill-Sans';
-    src: url('/assets/Gill_Sans/gillsansitalic.otf') format('opentype');
-    font-weight: normal;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'Gill-Sans';
-    src: url('/assets/Gill_Sans/gillsansbold.otf') format('opentype');
-    font-weight: bold;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Gill-Sans';
-    src: url('/assets/Gill_Sans/gillsansbolditalic.otf') format('opentype');
-    font-weight: bold;
-    font-style: italic;
-}
 
 
-
-
-
-$sans-font:  "Gill-Sans", sans-serif;
+$sans-font:  gill-sans-nova, sans-serif;
 $serif-font: $sans-font;  /* we only serif on special occasions */
 $font-family-sans-serif: $sans-font;
 $font-family-serif: bodoni-urw, serif;  /* we only use this for special cases */
