catch all the font references this time!

--- a/public/assets/ias.css
+++ b/public/assets/ias.css
@@ -31,7 +31,7 @@ h1 a, .h1 a {
 }
 
 h1.full-chars {
-    font-family:  gill-sans-nova, sans-serif;
+    font-family:  "gill-sans-nova", sans-serif;
     margin-top: 5px;
 }
 
@@ -115,7 +115,7 @@ span.large_it {
 .panel-footer {
     background-color: #1e1e1e;
     color: #FFFFFF;
-    font-family: gill-sans-nova, sans-serif;
+    font-family: "gill-sans-nova", sans-serif;
     font-weight: 100;
     text-align: left;
 }
@@ -123,7 +123,7 @@ span.large_it {
 .panel-footer a {
     background-color: #1e1e1e;
     color: #FFFFFF;
-    font-family: gill-sans-nova, sans-serif;
+    font-family: "gill-sans-nova", sans-serif;
     font-weight: 300;
     text-decoration: none;
 }
@@ -385,7 +385,7 @@ h1 > span.title {
 }
 
 .search_placeholder {
-  font-family: gill-sans-nova, sans-serif;
+  font-family: "gill-sans-nova", sans-serif;
 }
 
 .search_row_container, .search-filter-row {
@@ -499,7 +499,7 @@ h1 > span.title {
 }
 
 ul.navbar-nav {
-    font-family: gill-sans-nova, sans-serif;
+    font-family: "gill-sans-nova", sans-serif;
     font-weight: 500;
     letter-spacing: 1.1px;
     padding: 0;
@@ -578,7 +578,7 @@ div.search {
 }
 
 .form-inline .inline-label {
-    font-family: gill-sans-nova, sans-serif;
+    font-family: "gill-sans-nova", sans-serif;
     padding-right: 3px;
     text-transform: uppercase;
 }
@@ -717,7 +717,7 @@ i.fa-plus, i.fa-minus {
 
 /* page action and accordion buttons */
 .btn.page_action {
-    font-family: gill-sans-nova, sans-serif;
+    font-family: "gill-sans-nova", sans-serif;
     font-size: .7rem;
     padding: 5px 10px;
 }
@@ -814,7 +814,7 @@ i { vertical-align: top; }
 }
 
 .recordsummary {
-    font-family: "Gill Sans", sans-serif;
+    font-family: "gill-sans-nova", sans-serif;
 }
 
 /* remove zebra striping? */
@@ -1074,14 +1074,14 @@ a.objectimagelnk:hover, a.objectimagelnk:visited {
     margin-right: 1em;
     margin-left: 1em;
     padding: 1em;
-    font-family: gill-sans-nova, sans-serif;
+    font-family: "gill-sans-nova", sans-serif;
     font-style: normal;
 }
 .welcome_links > a {
     border-bottom: 2px solid #c6e4f5;
     color: #0579b8;
     font-weight: 500;
-    font-family: gill-sans-nova, sans-serif;
+    font-family: "gill-sans-nova", sans-serif;
     letter-spacing: 1.1px;
     padding-bottom: 3px;
     text-decoration: none;
